# xgm-manager

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: tauri.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: default.toml
src-tauri/src/: lib.rs
src-tauri/src/commands/: auth.rs  device.rs  log.rs  mod.rs  network.rs  package.rs
src-tauri/src/models/: config.rs  device.rs  log.rs  mod.rs  network.rs  package.rs
src-tauri/src/services/: auth_service.rs  device_service.rs  log_service.rs  mod.rs  network_service.rs  package_service.rs
src-tauri/src/utils/: config_loader.rs  http_utils.rs  jupyter.rs  logger.rs  mod.rs  udp_listener.rs
src/components/: ConfigForm.vue  DependencyList.vue  Drawer.vue  LogList.vue  NetworkConfig.vue  PackageDetailModal.vue  PackageUpgradeModal.vue  test.vue
src/composables/: useAuth.ts
src/layouts/: DefaultLayout.vue  Sidebar.vue  Topbar.vue
src/router/: index.ts
src/views/: Login.vue
src/views/devices/: DeviceList.vue
src/views/terminals/: Jupyter.vue
